updated frontpage wireframe

--- a/home.html
+++ b/home.html
@@ -107,6 +107,8 @@ transform: scaleX(-1);
   </div>
   <!-- /Full Page Image Header Area -->
 
+
+    <script src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.min.js"></script>
 </body>
 
 
